--- a/index.html
+++ b/index.html
@@ -24,12 +24,17 @@
 </header>
 <!-- Main Banner -->
 <div class="main-banner">
-
+    <img src="assets/img/banner.jpg" alt="Banner Nick" class="main-banner__hero-image">
+<div class="main-banner__content">
+    <img src="assets/img/Logo.png" alt="" class="main-banner__logo">
+    <h1 class="main-banner__title">Nuestros Deseos son Nuestra Fuerza</h1>
+    <p class="main-banner__description ">Nick Russell</p>
+</div>
 </div>
 <main>
     <!-- Description -->
-    <section class="l-section">
-
+    <section class="l-section"  class="l-container">
+        <p class="l-50 center-block center-content">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Et repellendus officia, architecto quibusdam quia excepturi perspiciatis incidunt neque? Voluptate dolorum, vitae magnam pariatur maiores et commodi ipsum possimus tempora nihil.</p>
     </section>
     <!-- Eventos -->
     <section class="l-section l-section--diagonal">
