--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
     </div>    
 </header>
 <!-- Main Banner -->
-<div class="main-banner">
+<div class="main-banner l-section">
     <img src="assets/img/banner.jpg" alt="Banner Nick" class="main-banner__hero-image">
 <div class="main-banner__content">
     <img src="assets/img/Logo.png" alt="" class="main-banner__logo">
@@ -33,20 +33,72 @@
 </div>
 <main>
     <!-- Description -->
-    <section class="l-section"  class="l-container">
+    <section class="l-section l-container">
         <p class="l-50 center-block center-content">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Et repellendus officia, architecto quibusdam quia excepturi perspiciatis incidunt neque? Voluptate dolorum, vitae magnam pariatur maiores et commodi ipsum possimus tempora nihil.</p>
     </section>
     <!-- Eventos -->
     <section class="l-section l-section--diagonal">
-
+        <div class="l-container">
+        
+            <h2 class="l-100 center-content">Eventos</h2>
+            <div class="cards-grid">
+            <div class="card">
+                <div class="card__img">
+                    <img src="assets/img/card01.jpeg" alt="Poster Card">
+                </div>
+                <div class="card__content">
+                    <h3 class="card__title">
+                        Prueba de Campeones
+                    </h3>
+                    <div class="card__subtitle">
+                        Nunca de Detengas
+                    </div>
+                    <div class="card__description">
+                        Lorem ipsum dolor, sit amet consectetur adipisicing elit. Deleniti commodi nihil nemo. Ut nihil beatae labore vel veritatis at aut hic sunt sapiente, fugit soluta itaque temporibus illum optio ea.
+                    </div>
+                    <div class="card__footer">
+                        <div class="card__footer-text">
+                            Nuetro Dolor es Nuestra Fuerza
+                        </div>
+                        <a href="#" class="button">
+                            Más Información
+                        </a>
+                    </div>
+                </div>
+            </div>
+            <div class="card">
+                <div class="card__img">
+                    <img src="assets/img/card02.jpeg" alt="Poster Card">
+                </div>
+                <div class="card__content">
+                    <h3 class="card__title">
+                        Prueba de Campeones
+                    </h3>
+                    <div class="card__subtitle">
+                        Nunca de Detengas
+                    </div>
+                    <div class="card__description">
+                        Lorem ipsum dolor, sit amet consectetur adipisicing elit. Deleniti commodi nihil nemo. Ut nihil beatae labore vel veritatis at aut hic sunt sapiente, fugit soluta itaque temporibus illum optio ea.
+                    </div>
+                    <div class="card__footer">
+                        <div class="card__footer-text">
+                            Nuetro Dolor es Nuestra Fuerza
+                        </div>
+                        <a href="#" class="button">
+                            Más Información
+                        </a>
+                    </div>
+                </div>
+            </div>
+        </div>
+        </div>
     </section>
     <!-- Expositores -->
     <section class="l-section">
 
     </section>
-    <!-- EdicionesAnteriores -->
+    <!-- Ediciones Anteriores -->
     <section class="l-section l-section--diagonal">
-
     </section> 
     <!-- Inscripciones -->
     <section class="l-section">
